fixes layout problems

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -7,12 +7,23 @@ h4 {
   font-weight: bold;
 }
 
+h6 {
+  font-weight: bold;
+}
+
 .sensor h5 {
   text-transform: capitalize;
+}
+
+.sensorList {
+  margin-top: 10%;
 }
 
 .sensor {
   border: 2px solid black;
   border-radius: 5px;
-  margin: 20px 50px 0 50px;
+  margin: auto;
+  width: 825px;
+  max-width: 100%;
+  margin-bottom: 10px;
 }
